Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-15530

Variable replicate_rewrite_db cannot be found in "show global variables"

    XMLWordPrintable

Details

    Description

      Hello,

      It's many time I asked myself but I never found answer about that, why we cannot find the variable : replicate_rewrite_db in "show global variables" or "show all slaves stauts" <- (should be there)

      MariaDB [(none)]> show global variables like '%replicate%';
      +----------------------------------+-----------+
      | Variable_name                    | Value     |
      +----------------------------------+-----------+
      | replicate_annotate_row_events    | ON        |
      | replicate_do_db                  |           |
      | replicate_do_table               |           |
      | replicate_events_marked_for_skip | REPLICATE |
      | replicate_ignore_db              |           |
      | replicate_ignore_table           |           |
      | replicate_wild_do_table          |           |
      | replicate_wild_ignore_table      |           |
      | wsrep_replicate_myisam           | OFF       |
      +----------------------------------+-----------+
      9 rows in set (0.005 sec)
      
      

      Attachments

        Issue Links

          Activity

            People

              anel Anel Husakovic
              Aurelien_LEQUOY Aurélien LEQUOY
              Votes:
              0 Vote for this issue
              Watchers:
              12 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.